k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-dito-svc
spec:
  selector:
    app: hands-on-dito
  ports:
    - port: 80
      targetPort: 8080
