k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: go-dito
spec:
  to:
    kind: Service
    name: go-dito-svc
  port:
    targetPort: 8080
